--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,133 +1,116 @@
-.pokemons {
+
+
+
+
+.container-detail-description{
+    display: flex;
+}
+.detail-decription{
+    display: flex;
+}
+.detail-decription img{
+    width: 250px;
+}
+.content h1{
+    margin: 0;
+}
+
+/* lista de pokemons */
+/* .content .pokemons */
+.pokemons{
     display: grid;
     grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
+.normal {background-color:#a6a877;}
+.grass {background-color:#77c850;}
+.fire {background-color:#ee7f30;}
+.water {background-color:#678fee;}
+.electric{background-color: #f7cf2e;}
+.ice {background-color:#98d5d7;}
+.ground {background-color:#dfbf69;}
+.flying {background-color:#a98ff0;}
+.poison {background-color:#a040a0;}
+.fighting {background-color:#bf3029;}
+.psychic {background-color:#f65687;}
+.dark {background-color:#725847;}
+.rock {background-color:#b8a137;}
+.bug {background-color:#a8b720;}
+.ghost {background-color:#6e5896;}
+.steel {background-color:#b9b7cf;}
+.dragon {background-color:#6f38f6;}
+.fairy {background-color:#f9aec7;}
 
-.normal {
-    background-color: #a6a877;
-}
 
-.grass {
-    background-color: #77c850;
-}
-
-.fire {
-    background-color: #ee7f30;
-}
-
-.water {
-    background-color: #678fee;
-}
-
-.electric {
-    background-color: #f7cf2e;
-}
-
-.ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
-}
-
-.fighting {
-    background-color: #bf3029;
-}
-
-.psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
-}
-
-.bug {
-    background-color: #a8b720;
-}
-
-.ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
-.dragon {
-    background-color: #6f38f6;
-}
-
-.fairy {
-    background-color: #f9aec7;
-}
-
-.pokemon {
+/* itens/li */
+/* .content .pokemons .pokemon */
+.pokemon{
     display: flex;
     flex-direction: column;
     margin: .5rem;
-    padding: 1rem;
-    border-radius: 1rem;
+    padding: 1rem; 
+    border-radius: 1em;
+    color: #fff;
 }
 
-.pokemon .number {
+
+/* numero do pokemon */
+/* .content .pokemons .pokemon .number */
+.number{
     color: #000;
-    opacity: .3;
+    opacity: 0.3;
     text-align: right;
     font-size: .625rem;
 }
 
-.pokemon .name {
+/* nome do pokemon */
+/* .content .pokemons .pokemon .name */
+.name{
     text-transform: capitalize;
     color: #fff;
     margin-bottom: .25rem;
+    font-size: .625rem;
 }
 
-.pokemon .detail {
+/* container: lista de tipo e imagem do pokemon*/
+/* .content .pokemons .pokemon .detail */
+.detail{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
 
-.pokemon .detail .types {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+/* tipo do pokemon */
+/* .content .pokemons .pokemon .detail .types */
+.types{
+   padding: 0;
+   margin: 0;
+   list-style: none;
 }
 
-.pokemon .detail .types .type {
+/* tipo do pokemon */
+/* .content .pokemons .pokemon .detail .types .type */
+.type{
     color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: .625rem ;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
-}
+ }
 
-.pokemon .detail img {
+/* imagem do pokemon */
+/* .content .pokemons .pokemon .detail img*/
+.detail img{
     max-width: 100%;
     height: 70px;
 }
 
-.pagination {
+.pagination{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -135,31 +118,30 @@
     width: 100%;
     padding: 1rem;
 }
-
-.pagination button {
+.pagination button{
     padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
     color: #fff;
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
 }
+.pagination button:hover{
+    cursor: pointer;
+}
+
 
 @media screen and (min-width: 380px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr;
+    .pokemons{
+        grid-template-columns: 1fr 1fr ;
     }
 }
-
 @media screen and (min-width: 576px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr;
+    .pokemons{
+        grid-template-columns: 1fr 1fr 1fr ;
     }
 }
-
 @media screen and (min-width: 992px) {
-    .pokemons {
+    .pokemons{
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
